5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1791_1617.log
== TEST (2019-05-29 14:23:03) 
-- CODE:
from numpy import*
v = input("Tipo de espada: ")
n = int(array(eval(input("Nivel: "))))
i = 0
dano = 0
while (i < size[n]):
	if (v[i] == "CENOURA"):
		dano = 2 * n[i]
	elif (v[i] == "FERRO"):
		dano = 4 * n[i]
	elif (v[i] == "DWARVEN"):
		dano = 8 * n[i]
	elif (v[i] == "ELVEN"):
		dano = 11 * n[i]
	elif (v[i] == "DAEDRIC"):
		dano = 14 * n[i]
	i = i + 1
print(round(dano, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:45) 
-- CODE:
from numpy import*
v = input("Tipo de espada: ")
n = array(eval(input("Nivel: ")))
i = 0
dano = 0
while (i < size[n]):
	if (v[i] == "CENOURA"):
		dano = 2 * n[i]
	elif (v[i] == "FERRO"):
		dano = 4 * n[i]
	elif (v[i] == "DWARVEN"):
		dano = 8 * n[i]
	elif (v[i] == "ELVEN"):
		dano = 11 * n[i]
	elif (v[i] == "DAEDRIC"):
		dano = 14 * n[i]
	i = i + 1
print(round(dano, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:24:14) 
-- CODE:
from numpy import*
v = input("Tipo de espada: ")
n = array(eval(input("Nivel: ")))
i = 0
dano = 0
while (i < size(n)):
	if (v[i] == "CENOURA"):
		dano = 2 * n[i]
	elif (v[i] == "FERRO"):
		dano = 4 * n[i]
	elif (v[i] == "DWARVEN"):
		dano = 8 * n[i]
	elif (v[i] == "ELVEN"):
		dano = 11 * n[i]
	elif (v[i] == "DAEDRIC"):
		dano = 14 * n[i]
	i = i + 1
print(round(dano, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:25:15) 
-- CODE:
from numpy import*
v = input("Tipo de espada: ")
n = array(eval(input("Nivel: ")))
i = 0
dano = 0
while (i < size(n)):
	if (v[i] == "CENOURA"):
		dano = 2 * n[i]
	elif (v[i] == "FERRO"):
		dano = 4 * n[i]
	elif (v[i] == "DWARVEN"):
		dano = 8 * n[i]
	elif (v[i] == "ELVEN"):
		dano = 11 * n[i]
	elif (v[i] == "DAEDRIC"):
		dano = 14 * n[i]
	i = i + 1
print(round(dano, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:26:59) 
-- CODE:
from numpy import*
v = input("Tipo de espada: ")
n = array(eval(input("Nivel: ")))
i = 1
dano = 0
while (i < size(n)):
	if (v[i] == "CENOURA"):
		dano = 2 * n[i]
	elif (v[i] == "FERRO"):
		dano = 4 * n[i]
	elif (v[i] == "DWARVEN"):
		dano = 8 * n[i]
	elif (v[i] == "ELVEN"):
		dano = 11 * n[i]
	elif (v[i] == "DAEDRIC"):
		dano = 14 * n[i]
	i = i + 1
print(round(dano, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:27:58) 
-- CODE:
from numpy import*
v = input("Tipo de espada: ")
n = array(eval(input("Nivel: ")))
i = 0
dano = ""
while (i < size(n)):
	if (v[i] == "CENOURA"):
		dano = 2 * n[i]
	elif (v[i] == "FERRO"):
		dano = 4 * n[i]
	elif (v[i] == "DWARVEN"):
		dano = 8 * n[i]
	elif (v[i] == "ELVEN"):
		dano = 11 * n[i]
	elif (v[i] == "DAEDRIC"):
		dano = 14 * n[i]
	i = i + 1
print(round(sum(dano), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:29:35) 
-- CODE:
from numpy import*
v = input("Tipo de espada: ")
n = array(eval(input("Nivel: ")))
i = 0
dano = 0
while (i < size(n)):
	if (v[i] == "CENOURA"):
		dano = 2 * n[i]
	elif (v[i] == "FERRO"):
		dano = 4 * n[i]
	elif (v[i] == "DWARVEN"):
		dano = 8 * n[i]
	elif (v[i] == "ELVEN"):
		dano = 11 * n[i]
	elif (v[i] == "DAEDRIC"):
		dano = 14 * n[i]
	i = i + 1
print(round(dano, 2), dtype = int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:30:25) 
-- CODE:
from numpy import*
v = input("Tipo de espada: ")
n = array(eval(input("Nivel: ")))
i = 0
dano = 0
while (i < size(n)):
	if (v[i] == "CENOURA"):
		dano = 2 * n[i]
	elif (v[i] == "FERRO"):
		dano = 4 * n[i]
	elif (v[i] == "DWARVEN"):
		dano = 8 * n[i]
	elif (v[i] == "ELVEN"):
		dano = 11 * n[i]
	elif (v[i] == "DAEDRIC"):
		dano = 14 * n[i]
	i = i + 1
dano = (dano, dtype=int)
print(round(dano, 2))
-- ERROR:
File "XXXX", line 18
    dano = (dano, dtype=int)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:30:35) 
-- CODE:
from numpy import*
v = input("Tipo de espada: ")
n = array(eval(input("Nivel: ")))
i = 0
dano = 0
while (i < size(n)):
	if (v[i] == "CENOURA"):
		dano = 2 * n[i]
	elif (v[i] == "FERRO"):
		dano = 4 * n[i]
	elif (v[i] == "DWARVEN"):
		dano = 8 * n[i]
	elif (v[i] == "ELVEN"):
		dano = 11 * n[i]
	elif (v[i] == "DAEDRIC"):
		dano = 14 * n[i]
	i = i + 1
dano = (dano, dtype==int)
print(round(dano, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:31:12) 
-- CODE:
from numpy import*
v = input("Tipo de espada: ")
n = array(eval(input("Nivel: ")))
i = 0
dano = 0
while (i < size(n)):
	if (v[i] == "CENOURA"):
		dano = 2 * n[i]
	elif (v[i] == "FERRO"):
		dano = 4 * n[i]
	elif (v[i] == "DWARVEN"):
		dano = 8 * n[i]
	elif (v[i] == "ELVEN"):
		dano = 11 * n[i]
	elif (v[i] == "DAEDRIC"):
		dano = 14 * n[i]
	i = i + 1
dano = (dano, dtype==int)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:45:24) 
-- CODE:
from numpy import*
v = input("Tipo de espada: ")
n = array(eval(input("Nivel: ")))
i = 0
dano = 0
while (i < size(n)):
	if (v[i] == "CENOURA"):
		dano = 2 * n[i]
	elif (v[i] == "FERRO"):
		dano = 4 * n[i]
	elif (v[i] == "DWARVEN"):
		dano = 8 * n[i]
	elif (v[i] == "ELVEN"):
		dano = 11 * n[i]
	elif (v[i] == "DAEDRIC"):
		dano = 14 * n[i]
	i = i + 1
dano = (dano, dtype==int)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:05:45) 
-- CODE:
from numpy import*
v = input("Tipo de espada: ")
n = array(eval(input("Nivel: ")))
i = 0
dano = 0
while (i < size(n)):
	if (v[i] == "CENOURA"):
		dano = dano + (2 * n[i])
	elif (v[i] == "FERRO"):
		dano = dano + (4 * n[i])
	elif (v[i] == "DWARVEN"):
		dano = dano + (8 * n[i])
	elif (v[i] == "ELVEN"):
		dano = dano + (11 * n[i])
	elif (v[i] == "DAEDRIC"):
		dano = dano + (14 * n[i])
	i = i + 1
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:11:57) 
-- CODE:
from numpy import*
v = input("Tipo de espada: ")
n = array(eval(input("Nivel: ")))
i = 0
dano = 0
while (i < size(n)):
	if (v[i] == "CENOURA"):
		dano = dano + (2 * n[i])
	elif (v[i] == "FERRO"):
		dano = dano + (4 * n[i])
	elif (v[i] == "DWARVEN"):
		dano = dano + (8 * n[i])
	elif (v[i] == "ELVEN"):
		dano = dano + (11 * n[i])
	elif (v[i] == "DAEDRIC"):
		dano = dano + (14 * n[i])
	i = i + 1
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:13:32) 
-- CODE:
from numpy import*
v = input("Tipo de espada: ")
n = array(eval(input("Nivel: ")))
i = 0
dano = 0
while (i < size(v)):
	if (v[i] == "CENOURA"):
		dano = dano + (2 * n[i])
	elif (v[i] == "FERRO"):
		dano = dano + (4 * n[i])
	elif (v[i] == "DWARVEN"):
		dano = dano + (8 * n[i])
	elif (v[i] == "ELVEN"):
		dano = dano + (11 * n[i])
	elif (v[i] == "DAEDRIC"):
		dano = dano + (14 * n[i])
	i = i + 1
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:13:50) 
-- CODE:
from numpy import*
v = input("Tipo de espada: ")
n = array(eval(input("Nivel: ")))
i = 0
dano = 0
while (i < size(n)):
	if (v[i] == "CENOURA"):
		dano = dano + (2 * n[i])
	elif (v[i] == "FERRO"):
		dano = dano + (4 * n[i])
	elif (v[i] == "DWARVEN"):
		dano = dano + (8 * n[i])
	elif (v[i] == "ELVEN"):
		dano = dano + (11 * n[i])
	elif (v[i] == "DAEDRIC"):
		dano = dano + (14 * n[i])
	i = i + 1
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:15:29) 
-- CODE:
from numpy import*
v = input("Tipo de espada: ")
n = array(eval(input("Nivel: ")))
i = 0
dano = 0
while (i < size(n)):
	if (v[i] == "CENOURA"):
		dano = dano + (2 * n[i])
	elif (v[i] == "FERRO"):
		dano = dano + (4 * n[i])
	elif (v[i] == "DWARVEN"):
		dano = dano + (8 * n[i])
	elif (v[i] == "ELVEN"):
		dano = dano + (11 * n[i])
	elif (v[i] == "DAEDRIC"):
		dano = dano + (14 * n[i])
	dano = dano
	i = i + 1
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:18:11) 
-- CODE:
from numpy import*
v = input("Tipo de espada: ")
n = array(eval(input("Nivel: ")))
i = 0
dano = 0
while (i < size(v)):
	if (v[i] == "CENOURA"):
		dano = dano + (2 * n[i])
	elif (v[i] == "FERRO"):
		dano = dano + (4 * n[i])
	elif (v[i] == "DWARVEN"):
		dano = dano + (8 * n[i])
	elif (v[i] == "ELVEN"):
		dano = dano + (11 * n[i])
	elif (v[i] == "DAEDRIC"):
		dano = dano + (14 * n[i])
	i = i + 1
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:19:56) 
-- CODE:
from numpy import*
v = input("Tipo de espada: ")
n = array(eval(input("Nivel: ")))
i = 0
dano = 0
while (i < size(v)):
	if (v[i] == "CENOURA"):
		dano = dano + (2 * n[i])
	elif (v[i] == "FERRO"):
		dano = dano + (4 * n[i])
	elif (v[i] == "DWARVEN"):
		dano = dano + (8 * n[i])
	elif (v[i] == "ELVEN"):
		dano = dano + (11 * n[i])
	elif (v[i] == "DAEDRIC"):
		dano = dano + (14 * n[i])
	i = i + 1
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:21:59) 
-- CODE:
from numpy import*
v = input("Tipo de espada: ") 
print(v)
n = array(eval(input("Nivel: ")))
i = 0
dano = 0
while (i < size(v)):
	if (v[i] == "CENOURA"):
		dano = dano + (2 * n[i])
	elif (v[i] == "FERRO"):
		dano = dano + (4 * n[i])
	elif (v[i] == "DWARVEN"):
		dano = dano + (8 * n[i])
	elif (v[i] == "ELVEN"):
		dano = dano + (11 * n[i])
	elif (v[i] == "DAEDRIC"):
		dano = dano + (14 * n[i])
	i = i + 1
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:22:11) 
-- CODE:
from numpy import*
v = input("Tipo de espada: ") 
print(v)
n = array(eval(input("Nivel: ")))
i = 0
dano = 0
while (i < size(v)):
	if (v[i] == "CENOURA"):
		dano = dano + (2 * n[i])
	elif (v[i] == "FERRO"):
		dano = dano + (4 * n[i])
	elif (v[i] == "DWARVEN"):
		dano = dano + (8 * n[i])
	elif (v[i] == "ELVEN"):
		dano = dano + (11 * n[i])
	elif (v[i] == "DAEDRIC"):
		dano = dano + (14 * n[i])
	i = i + 1
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:22:32) 
-- CODE:
from numpy import*
v = input("Tipo de espada: ") 
print(v)
n = array(eval(input("Nivel: ")))
i = 0
dano = 0
while (i < size(v)):
	if (v[i] == "CENOURA"):
		dano = dano + (2 * n[i])
	elif (v[i] == "FERRO"):
		dano = dano + (4 * n[i])
	elif (v[i] == "DWARVEN"):
		dano = dano + (8 * n[i])
	elif (v[i] == "ELVEN"):
		dano = dano + (11 * n[i])
	elif (v[i] == "DAEDRIC"):
		dano = dano + (14 * n[i])
	i = i + 1
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:25:02) 
-- CODE:
from numpy import*
v = input("Tipo de espada: ") 
print(v)
n = array(eval(input("Nivel: ")))
i = 0
dano = 0
while (i < size(v)):
	if (v[i] == "CENOURA"):
		dano = dano + (2 * n[i])
	elif (v[i] == "FERRO"):
		dano = dano + (4 * n[i])
	elif (v[i] == "DWARVEN"):
		dano = dano + (8 * n[i])
	elif (v[i] == "ELVEN"):
		dano = dano + (11 * n[i])
	elif (v[i] == "DAEDRIC"):
		dano = dano + (14 * n[i])
	i = i + 1
print(dano)
-- EXECUTION TIME:
0.491057
-- TEST CASE 1:
---- input:
["DAEDRIC","ELVEN","CENOURA","FERRO"]
[2,1,6,2]
---- correct output:
59
---- user output:
["DAEDRIC","ELVEN","CENOURA","FERRO"]
0
-- TEST CASE 2:
---- input:
["DAEDRIC","FERRO","CENOURA","DWARVEN"]
[2,1,6,6]
---- correct output:
92
---- user output:
["DAEDRIC","FERRO","CENOURA","DWARVEN"]
0
-- TEST CASE 3:
---- input:
["DAEDRIC","FERRO","DWARVEN","ELVEN"]
[4,1,6,3]
---- correct output:
141
---- user output:
["DAEDRIC","FERRO","DWARVEN","ELVEN"]
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:25:14) 
-- CODE:
from numpy import*
v = input("Tipo de espada: ") 
print(v)
n = array(eval(input("Nivel: ")))
i = 0
dano = 0
while (i < size(v)):
	if (v[i] == "CENOURA"):
		dano = dano + (2 * n[i])
	elif (v[i] == "FERRO"):
		dano = dano + (4 * n[i])
	elif (v[i] == "DWARVEN"):
		dano = dano + (8 * n[i])
	elif (v[i] == "ELVEN"):
		dano = dano + (11 * n[i])
	elif (v[i] == "DAEDRIC"):
		dano = dano + (14 * n[i])
	i = i + 1
print(dano)
-- EXECUTION TIME:
0.46268
-- TEST CASE 1:
---- input:
["DAEDRIC","ELVEN","CENOURA","FERRO"]
[2,1,6,2]
---- correct output:
59
---- user output:
["DAEDRIC","ELVEN","CENOURA","FERRO"]
0
-- TEST CASE 2:
---- input:
["DAEDRIC","FERRO","CENOURA","DWARVEN"]
[2,1,6,6]
---- correct output:
92
---- user output:
["DAEDRIC","FERRO","CENOURA","DWARVEN"]
0
-- TEST CASE 3:
---- input:
["DAEDRIC","FERRO","DWARVEN","ELVEN"]
[4,1,6,3]
---- correct output:
141
---- user output:
["DAEDRIC","FERRO","DWARVEN","ELVEN"]
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:30:14) 
-- CODE:
from numpy import*
v = array(eval(input("Tipo de espada: ")))
print(v)
n = array(eval(input("Nivel: ")))
i = 0
dano = 0
while (i < size(v)):
	if (v[i] == "CENOURA"):
		dano = dano + (2 * n[i])
	elif (v[i] == "FERRO"):
		dano = dano + (4 * n[i])
	elif (v[i] == "DWARVEN"):
		dano = dano + (8 * n[i])
	elif (v[i] == "ELVEN"):
		dano = dano + (11 * n[i])
	elif (v[i] == "DAEDRIC"):
		dano = dano + (14 * n[i])
	i = i + 1
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:30:34) 
-- CODE:
from numpy import*
v = array(eval(input("Tipo de espada: ")))
n = array(eval(input("Nivel: ")))
i = 0
dano = 0
while (i < size(v)):
	if (v[i] == "CENOURA"):
		dano = dano + (2 * n[i])
	elif (v[i] == "FERRO"):
		dano = dano + (4 * n[i])
	elif (v[i] == "DWARVEN"):
		dano = dano + (8 * n[i])
	elif (v[i] == "ELVEN"):
		dano = dano + (11 * n[i])
	elif (v[i] == "DAEDRIC"):
		dano = dano + (14 * n[i])
	i = i + 1
print(dano)
-- EXECUTION TIME:
0.472843
-- TEST CASE 1:
---- input:
["DAEDRIC","ELVEN","CENOURA","FERRO"]
[2,1,6,2]
---- correct output:
59
---- user output:
59
-- TEST CASE 2:
---- input:
["DAEDRIC","FERRO","CENOURA","DWARVEN"]
[2,1,6,6]
---- correct output:
92
---- user output:
92
-- TEST CASE 3:
---- input:
["DAEDRIC","FERRO","DWARVEN","ELVEN"]
[4,1,6,3]
---- correct output:
141
---- user output:
141
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
